# agdd

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CHANGELOG.md  CI_WORKFLOW_CHANGES_NEEDED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB.md  Makefile  PLANS.md  PR_DESCRIPTION.md  README.md  RUNNERS.md  SECURITY.md  SKILL.md  SSOT.md  VERIFICATION_REPORT.md  pyproject.toml  sitecustomize.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.mcp/: README.md
.mcp/servers/: fetch.yaml  filesystem.yaml  git.yaml  memory.yaml  pg-readonly.yaml
agdd/: __init__.py  cli.py  registry.py
agdd/api/: __init__.py  config.py  models.py  rate_limit.py  run_tracker.py  security.py  server.py
agdd/governance/: __init__.py  gate.py
agdd/runners/: __init__.py  agent_runner.py  base.py  flowrunner.py
agdd/skills/: __init__.py  echo.py
agdd/storage/: __init__.py  base.py  factory.py  models.py  observability.py
agents/: AGENTS.md
benchmarks/: README.md  cache_benchmark.py  harness.py
catalog/_schemas/: agent.schema.json  eval.schema.json  policy.schema.json  routing.schema.json  skill.schema.json
catalog/contracts/: approval_ticket.schema.json  candidate_profile.json  candidate_profile.schema.json  comp_advisor_input.schema.json  comp_advisor_output.schema.json  handoff_request.schema.json  handoff_response.schema.json  memory_entry.schema.json  offer_packet.json  offer_packet.schema.json  salary_band.json  salary_band.schema.json  web_search_query.json  web_search_query.schema.json  web_search_result.json  web_search_result.schema.json
catalog/policies/: mcp_permissions.yaml  retention_policy.yaml  tool_permissions.yaml
catalog/registry/: agents.yaml  skills.yaml
catalog/routing/: auto-optimize.yaml
catalog/skills/: AGENTS.md
collab/execplans/: README.md  template.md
contracts/: candidate_profile.schema.json  comp_advisor_output.schema.json
docs/: approval.md  durable-run.md  handoff.md  mcp.md  memory.md  storage.md
docs/architecture/: agents.md  plans.md  skills.md  ssot.md
docs/development/: changelog.md  contributing.md  roadmap.md  worktrees.md
docs/guides/: a2a-communication.md  agent-development.md  api-usage.md  cost-optimization.md  github-integration.md  mcp-integration.md  mcp-migration.md  mcp-server.md  migration.md  moderation.md  multi-provider.md  semantic-cache.md  (+1 more)
observability/: summarize_runs.py
ops/: __init__.py
registry/: agents.yaml  skills.yaml
scripts/: setup-github-webhook.sh
tests/: conftest.py  test_cli.py
tools/: check_docs.py  flowrunner_env.sh  gate_flow_summary.py  lint_registry.py  verify_vendor.py
(+426 files in other folders)
