[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agdd"
version = "0.1.0"
description = "Framework for AG-Driven Development (AGDD) systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.11.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]


[project.scripts]
agdd = "agdd.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agdd*", "observability*"]

[tool.setuptools.package-data]
"agdd" = [
    "assets/**/*.json",
    "assets/**/*.yaml",
    "assets/**/*.yml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
    ".",
]
